--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "lodash": "^4.17.21"
   },
+  "type": "module",
   "devDependencies": {
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.2.165",
