--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "arpon",
   "author": "@jaikme",
   "license": "MIT",
+  "private": true,
   "version": "0.0.0",
   "repository": {
     "type": "git",
@@ -15,6 +16,10 @@
     "url": "https://github.com/HTOMAN/Arpon/issues"
   },
   "homepage": "https://github.com/HTOMAN/Arpon/blob/main/README.md",
+  "workspaces": [
+    "arpon",
+    "packages/*"
+  ],
   "scripts": {
     "start": "tsc -w",
     "build": "tsc"
@@ -40,6 +45,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.2.0",
     "prettier": "^2.1.2",
+    "rimraf": "^3.0.2",
     "typescript": ">=4.0.0"
   },
   "quokka": {
