--- a/tsconfig.common.json
+++ b/tsconfig.common.json
@@ -1,20 +1,17 @@
 {
   "compilerOptions": {
-    "rootDir": "arpon",
-    "outDir": "dist",
-    "target": "es2020",
-    "lib": ["dom", "dom.iterable", "es2020"],
+    "target": "ESNext",
+    "lib": ["ESNext", "DOM"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "ES2020",
+    "module": "ESNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
     "noUnusedParameters": true,
     "preserveConstEnums": true,
     "noImplicitAny": true,
@@ -25,6 +22,5 @@
     "sourceMap": true,
     "strictNullChecks": true
   },
-  "exclude": ["node_modules"],
-  "include": ["**/*.ts"]
+  "exclude": ["node_modules"]
 }
