--- a/packages/currency/package.json
+++ b/packages/currency/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mononow/currency",
+  "name": "@arpon/currency",
   "version": "10.0.0",
   "description": "Arpon currency module",
   "author": "MONO.now",
