--- a/packages/date/package.json
+++ b/packages/date/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mononow/date",
+  "name": "@arpon/date",
   "version": "10.5.0",
   "description": "Arpon date module",
   "author": "MONO.now",
