--- a/packages/device/package.json
+++ b/packages/device/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mononow/device",
+  "name": "@arpon/device",
   "version": "10.5.0",
   "description": "Arpon device module",
   "author": "MONO.now",
