--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "test:watch": "jest --watch --collect-coverage",
     "test:ci": "jest --no-cache --verbose",
     "link:packages": "lerna exec npm link",
-    "build:modules": "lerna run --no-bail --scope=\"@mononow/{core,styles}*\" build",
-    "build:shared": "lerna run --no-bail --scope=\"@mononow/utils\" build",
+    "build:modules": "lerna run --no-bail --scope=\"@arpon/{core,styles}*\" build",
+    "build:shared": "lerna run --no-bail --scope=\"@arpon/utils\" build",
     "packages:clear": "lerna exec -- rm -rf node_modules package-lock.json",
     "check-next-version": "echo 'n' | lerna version",
     "release": "rm -rf packages/**/package-lock.json && lerna publish",
