--- a/packages/arpon-base/package.json
+++ b/packages/arpon-base/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mononow/jade-base",
+  "name": "@arpon/base",
   "version": "0.0.1",
   "author": "MONO.now",
   "description": "Unstyled library of Svelte UI components and fundamental elements for Arpon",
@@ -9,7 +9,7 @@
   },
   "keywords": [
     "mononow",
-    "jade",
+    "arpon",
     "svelte",
     "typescript",
     "ui"
@@ -17,7 +17,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/mononow/arpon.git",
-    "directory": "packages/jade"
+    "directory": "packages/arpon"
   },
   "license": "Apache-2.0",
   "sideEffects": false,
