--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mononow/cli",
+  "name": "@arpon/cli",
   "version": "10.0.0",
   "description": "Arpon CLI",
   "author": "MONO.now",
@@ -15,7 +15,7 @@
     "mononow": "./cli.js"
   },
   "dependencies": {
-    "@mononow/utils": "workspace:*",
+    "@arpon/utils": "workspace:*",
     "case": "^1.6.1",
     "cross-env": "^7",
     "global-dirs": "^0.1.1",
