--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,14 +1,8 @@
 {
   "recommendations": [
-    "CoenraadS.bracket-pair-colorizer-2",
-    "aaron-bond.better-comments",
     "dbaeumer.vscode-eslint",
     "stylelint.vscode-stylelint",
     "editorconfig.editorconfig",
-    "esbenp.prettier-vscode",
-    "formulahendry.auto-close-tag",
-    "msjsdiag.debugger-for-chrome",
-    "ricard.postcss",
-    "vincaslt.highlight-matching-tag"
+    "esbenp.prettier-vscode"
   ]
 }
