--- a/lerna.json
+++ b/lerna.json
@@ -1,11 +1,5 @@
 {
-  "version": "independent",
-  "npmClient": "yarn",
-  "useWorkspaces": true,
-  "useNx": true,
-  "ignoreChanges": [
-    "**/node_modules/**",
-    "**/test/**",
-    ".npmrc"
-  ]
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+  "version": "0.0.0",
+  "npmClient": "yarn"
 }
