--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "MONO.now",
   "private": true,
   "workspaces": [
-    "packages/components/*",
-    "packages/*"
+    "packages/*",
+    "test",
+    "docs"
   ],
   "license": "Apache-2.0",
   "engines": {
@@ -17,10 +18,10 @@
   "type": "module",
   "scripts": {
     "lint": "npm run lint:css; npm run lint:js",
-    "lint:js": "eslint \"*.js\" \"{tools,packages}/**/*.{js,html,svelte}\"",
-    "lint:css": "stylelint \"packages/**/*.{html,svelte,css,pcss}\"",
-    "format:js": "prettier --write \"*.js\" \"{tools,packages}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages}/**/*.{js,html,svelte}\"",
-    "format:css": "prettier --write \"packages/**/*.{css,pcss}\" && stylelint --fix \"packages/**/*.{html,svelte,css,pcss}\"",
+    "lint:js": "eslint \"*.js\" \"{tools,packages}/**/*.{js,html,tsx}\"",
+    "lint:css": "stylelint \"packages/**/*.{html,tsx,css,pcss}\"",
+    "format:js": "prettier --write \"*.js\" \"{tools,packages}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages}/**/*.{js,html,tsx}\"",
+    "format:css": "prettier --write \"packages/**/*.{css,pcss}\" && stylelint --fix \"packages/**/*.{html,tsx,css,pcss}\"",
     "format": "npm run format:css; npm run format:js",
     "test": "jest --no-cache --collect-coverage",
     "test:watch": "jest --watch --collect-coverage",
@@ -34,7 +35,6 @@
     "link:name": "./tools/get-links.sh -m name",
     "link:path": "./tools/get-links.sh -m path",
     "postinstall": "husky install && run-s build:shared build:modules",
-    "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "config": {
@@ -43,7 +43,7 @@
     }
   },
   "lint-staged": {
-    "*.{html,svelte}": [
+    "*.{html,tsx}": [
       "stylelint --fix",
       "git add"
     ],
@@ -61,27 +61,23 @@
     "@babel/cli": "^7",
     "@babel/core": "^7",
     "@babel/preset-env": "^7",
-    "@types/node": "^20.2.3",
+    "@types/node": "^20.6.0",
+    "@types/react": "^18.2.21",
     "babel-loader": "^9.1.2",
     "commitlint": "^17.6.6",
     "cross-env": "^7.0.3",
-    "eslint": "^8.40.0",
+    "eslint": "^8.49.0",
     "husky": "^8.0.3",
-    "jest": "^29.5.0",
     "json5": "^2.2.3",
-    "lerna": "^6.6.2",
+    "lerna": "^7.2.0",
     "lint-staged": "^13.2.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
     "prettier": "^3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.0.12",
     "stylelint": "^15",
-    "svelte": "^3.59.1",
-    "svelte-loader": "3.1.5",
-    "svelte-preprocess": "^5.0.3",
-    "ts-jest": "^29.1.0",
+    "stylelint-config-standard": "^34.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5",
     "webpack": "^5"
