--- a/packages/arpon-base/package.json
+++ b/packages/arpon-base/package.json
@@ -10,7 +10,6 @@
   "keywords": [
     "mononow",
     "arpon",
-    "svelte",
     "typescript",
     "ui"
   ],
@@ -24,13 +23,8 @@
   "engines": {
     "node": ">=12.0.0"
   },
-  "devDependencies": {
-    "@storybook/svelte": "^7.0.12"
-  },
   "peerDependencies": {
     "eslint": "^8",
-    "svelte": "^3",
-    "typescript": "^5",
-    "webpack": "^5"
+    "typescript": "^5"
   }
 }
