--- a/packages/arpon-material/package.json
+++ b/packages/arpon-material/package.json
@@ -10,7 +10,6 @@
   "keywords": [
     "mononow",
     "arpon",
-    "svelte",
     "typescript",
     "ui"
   ],
@@ -26,8 +25,6 @@
   },
   "peerDependencies": {
     "eslint": "^8",
-    "svelte": "^3",
-    "typescript": "^5",
-    "webpack": "^5"
+    "typescript": "^5"
   }
 }
