--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,15 +1,11 @@
 {
   "name": "@arpon/core",
-  "version": "10.0.0",
+  "version": "0.0.0",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
-  "description": "Arpon QT bindings, wrappers and embbebded hardware handlers",
+  "description": "Arpon core bindings, wrappers, constants, and handlers",
   "author": "MONO.now",
   "license": "Apache-2.0",
-  "engines": {
-    "node": ">= 8 || <= 14",
-    "npm": ">= 7"
-  },
   "files": [
     "*",
     "dist",
@@ -34,6 +30,5 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.1",
     "typescript": "^5.0.4"
-  },
-  "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
+  }
 }
