--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@arpon/eslint-config",
-  "description": "Stylelint configuration for Arpon SDK",
+  "description": "ESLint configuration for Arpon SDK",
   "version": "1.0.0",
   "license": "Apache-2.0",
   "engines": {
     "node": "^12.22.0 || ^13.14.0 || ^14.17.0 || ^15.3.0 || >=16.0.0"
   },
   "main": "index.js",
+  "type": "commonjs",
   "publishConfig": {
     "access": "public"
   },
@@ -14,7 +15,7 @@
     "stylelint-config",
     "mononow",
     "eslint",
-    "mononow"
+    "arpon"
   ],
   "repository": {
     "type": "git",
@@ -27,21 +28,21 @@
     "@babel/core": "^7",
     "@babel/eslint-parser": "^7.21.8",
     "@babel/eslint-plugin": "^7.19.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-cypress": "^2.13.3",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-storybook": "^0.6.12",
-    "eslint-plugin-svelte": "^2.28.0",
-    "prettier": "^2.8.8",
-    "svelte": "^3.59.1",
-    "svelte-eslint-parser": "^0.29.0"
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3"
   },
   "devDependencies": {
     "eslint": "^8.40.0",
