--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,7 @@
+compressionLevel: mixed
+
+enableGlobalCache: false
+
 enableTransparentWorkspaces: false
 
 nodeLinker: node-modules
@@ -9,4 +13,4 @@ supportedArchitectures:
   os:
     - current
 
-yarnPath: .yarn/releases/yarn-3.6.3.cjs
+yarnPath: .yarn/releases/yarn-4.0.2.cjs
