--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@arpon/docs",
   "version": "0.0.0",
-  "author": "MONO.now",
+  "author": "MANY DOTS Team",
   "type": "module",
   "license": "MIT",
   "private": true,
@@ -9,14 +9,25 @@
     "dev": "next dev",
     "start": "next start"
   },
+  "engines": {
+    "yarn": "^3"
+  },
   "dependencies": {
     "@babel/core": "^7.22.17",
     "core-js": "^3.32.2",
-    "next": "^13.4.19",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "^14.0.0",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.22.15"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.0",
+    "postcss": "^8",
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
