--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "Apache-2.0",
   "engines": {
     "node": ">= 16",
-    "npm": ">= 7"
+    "yarn": "^3"
   },
   "type": "module",
   "scripts": {
@@ -82,5 +82,5 @@
     "typescript": "^5",
     "webpack": "^5"
   },
-  "packageManager": "yarn@3.6.3"
+  "packageManager": "yarn@4.0.2"
 }
