refactor: ♻️ remove undesired files and configs

--- a/packages/configs/tsconfig.json
+++ b/packages/configs/tsconfig.json
@@ -15,10 +15,10 @@
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
     "forceConsistentCasingInFileNames": true,
-    "types": [
+    /* "types": [
       "jest",
       "@testing-library/jest-dom"
-    ],
+    ], */
     "sourceMap": true,
     "strict": false,
     "esModuleInterop": true,
