--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -44,33 +44,7 @@
   "dependencies": {
     "@arpon/styles": "workspace:*",
     "@arpon/utils": "workspace:*",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@tsconfig/svelte": "^4.0.1",
-    "autoprefixer": "^10.4.14",
-    "css-loader": "^6.7.4",
-    "mini-css-extract-plugin": "^2.7.6",
-    "postcss": "^8.4.23",
-    "postcss-advanced-variables": "^3.0.1",
-    "postcss-calc": "^9.0.1",
-    "postcss-cli": "^10.1.0",
-    "postcss-combine-duplicated-selectors": "^10.0.3",
-    "postcss-css-variables": "^0.19.0",
-    "postcss-custom-properties": "^13.1.5",
-    "postcss-easy-import": "^4.0.0",
-    "postcss-extend-rule": "^4.0.0",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-hexrgba": "^2.1.0",
-    "postcss-html": "^1.5.0",
-    "postcss-load-config": "^4.0.1",
-    "postcss-loader": "^7.3.0",
-    "postcss-nested": "^6.0.1",
-    "postcss-nesting": "^11.2.2",
-    "postcss-preset-env": "^8.3.2",
-    "postcss-reporter": "^7.0.5",
-    "postcss-sorting": "^8.0.2",
-    "resolve-url-loader": "^5.0.0",
-    "ts-loader": "^9",
-    "url-loader": "^4.1.1"
+    "postcss": "^8"
   },
   "peerDependencies": {
     "typescript": "^5"
