--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arpon/webpack",
-  "version": "9.5.0",
+  "version": "0.0.0",
   "description": "Webpack configs for Arpon applications",
   "author": "Many Dots",
   "type": "module",
@@ -26,38 +26,17 @@
     "@arpon/babel-config": "workspace:*",
     "@arpon/configs": "workspace:*",
     "@arpon/utils": "workspace:*",
-    "@babel/core": "^7",
-    "@types/html-minifier": "^4.0.2",
     "@types/node": ">=20",
-    "babel-loader": "^9",
-    "colorize-template": "^1.0.0",
-    "css-minimizer-webpack-plugin": "^5.0.0",
-    "eslint-webpack-plugin": "^4.0.1",
-    "filemanager-webpack-plugin": "^8.0.0",
-    "html-minifier": "^4.0.0",
-    "lodash": "^4",
-    "lodash-webpack-plugin": "^0.11.6",
-    "mini-css-extract-plugin": "^2.7.5",
-    "mini-html-webpack-plugin": "^3.1.3",
-    "picocolors": "^1.0.0",
-    "postcss": "^8.4.23",
-    "postcss-loader": "^7.3.0",
-    "pretty-time": "^1.1.0",
-    "resolve-url-loader": "^5.0.0",
     "sucrase": "^3.32.0",
-    "terser": "^5.17.4",
-    "terser-webpack-plugin": "^5.3.8",
     "ts-loader": "^9",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.5.0",
     "typescript": "^5",
-    "url-loader": "^4.1.1",
     "webpack": "^5",
     "webpack-cli": ">=5",
     "webpack-dev-server": "^4.15.0",
-    "webpack-merge": "^5.8.0",
-    "xmlbuilder": "^15.1.1"
+    "webpack-merge": "^5.8.0"
   },
   "peerDependencies": {
     "eslint": "^8"
